ln4_lsp/generated/LN4Parser.py
# Generated from ln4_lsp/grammar/LN4.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LN4Parser ( Parser ):

    grammarFileName = "LN4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'elseif'", "'else'", 
                     "'endif'", "'for'", "'to'", "'step'", "'next'", "'while'", 
                     "'wend'", "'do'", "'loop'", "'until'", "'return'", 
                     "'and'", "'or'", "'not'", "'<>'", "'<='", "'>='", "'<'", 
                     "'>'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", 
                     "'!'", "','", "':'", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSEIF", "ELSE", "ENDIF", 
                      "FOR", "TO", "STEP", "NEXT", "WHILE", "WEND", "DO", 
                      "LOOP", "UNTIL", "RETURN", "AND", "OR", "NOT", "NEQ", 
                      "LTE", "GTE", "LT", "GT", "EQ", "PLUS", "MINUS", "STAR", 
                      "SLASH", "MOD", "DOT", "BANG", "COMMA", "COLON", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "STRING_LITERAL", 
                      "NUMBER_LITERAL", "DATE_LITERAL", "HASH_REF", "AT_REF", 
                      "IDENTIFIER", "NL", "WS", "LINE_COMMENT_QUOTE", "LINE_COMMENT_SLASH", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statementList = 1
    RULE_separator = 2
    RULE_statement = 3
    RULE_ifBlock = 4
    RULE_elseIfBlock = 5
    RULE_elseBlock = 6
    RULE_inlineStatements = 7
    RULE_inlineStmt = 8
    RULE_forBlock = 9
    RULE_whileBlock = 10
    RULE_doBlock = 11
    RULE_returnStatement = 12
    RULE_assignmentOrCall = 13
    RULE_expression = 14
    RULE_orExpr = 15
    RULE_andExpr = 16
    RULE_notExpr = 17
    RULE_compareExpr = 18
    RULE_compareOp = 19
    RULE_addExpr = 20
    RULE_mulExpr = 21
    RULE_unaryExpr = 22
    RULE_memberExpression = 23
    RULE_memberTail = 24
    RULE_primaryExpression = 25
    RULE_argList = 26

    ruleNames =  [ "program", "statementList", "separator", "statement", 
                   "ifBlock", "elseIfBlock", "elseBlock", "inlineStatements", 
                   "inlineStmt", "forBlock", "whileBlock", "doBlock", "returnStatement", 
                   "assignmentOrCall", "expression", "orExpr", "andExpr", 
                   "notExpr", "compareExpr", "compareOp", "addExpr", "mulExpr", 
                   "unaryExpr", "memberExpression", "memberTail", "primaryExpression", 
                   "argList" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSEIF=3
    ELSE=4
    ENDIF=5
    FOR=6
    TO=7
    STEP=8
    NEXT=9
    WHILE=10
    WEND=11
    DO=12
    LOOP=13
    UNTIL=14
    RETURN=15
    AND=16
    OR=17
    NOT=18
    NEQ=19
    LTE=20
    GTE=21
    LT=22
    GT=23
    EQ=24
    PLUS=25
    MINUS=26
    STAR=27
    SLASH=28
    MOD=29
    DOT=30
    BANG=31
    COMMA=32
    COLON=33
    LPAREN=34
    RPAREN=35
    LBRACKET=36
    RBRACKET=37
    STRING_LITERAL=38
    NUMBER_LITERAL=39
    DATE_LITERAL=40
    HASH_REF=41
    AT_REF=42
    IDENTIFIER=43
    NL=44
    WS=45
    LINE_COMMENT_QUOTE=46
    LINE_COMMENT_SLASH=47
    BLOCK_COMMENT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(LN4Parser.StatementListContext,0)


        def EOF(self):
            return self.getToken(LN4Parser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.NL)
            else:
                return self.getToken(LN4Parser.NL, i)

        def getRuleIndex(self):
            return LN4Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LN4Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 54
                self.match(LN4Parser.NL)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.statementList()
            self.state = 61
            self.match(LN4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LN4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(LN4Parser.StatementContext,i)


        def separator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LN4Parser.SeparatorContext)
            else:
                return self.getTypedRuleContext(LN4Parser.SeparatorContext,i)


        def getRuleIndex(self):
            return LN4Parser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = LN4Parser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 63
                    self.statement()
                    self.state = 64
                    self.separator() 
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 71
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.NL)
            else:
                return self.getToken(LN4Parser.NL, i)

        def COLON(self):
            return self.getToken(LN4Parser.COLON, 0)

        def getRuleIndex(self):
            return LN4Parser.RULE_separator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparator" ):
                listener.enterSeparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparator" ):
                listener.exitSeparator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeparator" ):
                return visitor.visitSeparator(self)
            else:
                return visitor.visitChildren(self)




    def separator(self):

        localctx = LN4Parser.SeparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_separator)
        self._la = 0 # Token type
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 74
                    self.match(LN4Parser.NL)
                    self.state = 77 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==44):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(LN4Parser.COLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(LN4Parser.COLON)
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 81
                    self.match(LN4Parser.NL)
                    self.state = 84 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==44):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(LN4Parser.IfBlockContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(LN4Parser.ForBlockContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(LN4Parser.WhileBlockContext,0)


        def doBlock(self):
            return self.getTypedRuleContext(LN4Parser.DoBlockContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(LN4Parser.ReturnStatementContext,0)


        def assignmentOrCall(self):
            return self.getTypedRuleContext(LN4Parser.AssignmentOrCallContext,0)


        def getRuleIndex(self):
            return LN4Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LN4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.ifBlock()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.forBlock()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.whileBlock()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.doBlock()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.returnStatement()
                pass
            elif token in [18, 26, 34, 38, 39, 40, 41, 42, 43]:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.assignmentOrCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LN4Parser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(LN4Parser.ExpressionContext,0)


        def THEN(self):
            return self.getToken(LN4Parser.THEN, 0)

        def statementList(self):
            return self.getTypedRuleContext(LN4Parser.StatementListContext,0)


        def ENDIF(self):
            return self.getToken(LN4Parser.ENDIF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.NL)
            else:
                return self.getToken(LN4Parser.NL, i)

        def elseIfBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LN4Parser.ElseIfBlockContext)
            else:
                return self.getTypedRuleContext(LN4Parser.ElseIfBlockContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(LN4Parser.ElseBlockContext,0)


        def inlineStatements(self):
            return self.getTypedRuleContext(LN4Parser.InlineStatementsContext,0)


        def getRuleIndex(self):
            return LN4Parser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):

        localctx = LN4Parser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(LN4Parser.IF)
                self.state = 97
                self.expression()
                self.state = 98
                self.match(LN4Parser.THEN)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 99
                    self.match(LN4Parser.NL)
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==44):
                        break

                self.state = 104
                self.statementList()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 105
                    self.elseIfBlock()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 111
                    self.elseBlock()


                self.state = 114
                self.match(LN4Parser.ENDIF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(LN4Parser.IF)
                self.state = 117
                self.expression()
                self.state = 118
                self.match(LN4Parser.THEN)
                self.state = 119
                self.inlineStatements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(LN4Parser.ELSEIF, 0)

        def expression(self):
            return self.getTypedRuleContext(LN4Parser.ExpressionContext,0)


        def THEN(self):
            return self.getToken(LN4Parser.THEN, 0)

        def statementList(self):
            return self.getTypedRuleContext(LN4Parser.StatementListContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.NL)
            else:
                return self.getToken(LN4Parser.NL, i)

        def getRuleIndex(self):
            return LN4Parser.RULE_elseIfBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseIfBlock" ):
                listener.enterElseIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseIfBlock" ):
                listener.exitElseIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseIfBlock" ):
                return visitor.visitElseIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseIfBlock(self):

        localctx = LN4Parser.ElseIfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elseIfBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LN4Parser.ELSEIF)
            self.state = 124
            self.expression()
            self.state = 125
            self.match(LN4Parser.THEN)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.match(LN4Parser.NL)
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==44):
                    break

            self.state = 131
            self.statementList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(LN4Parser.ELSE, 0)

        def statementList(self):
            return self.getTypedRuleContext(LN4Parser.StatementListContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.NL)
            else:
                return self.getToken(LN4Parser.NL, i)

        def getRuleIndex(self):
            return LN4Parser.RULE_elseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBlock" ):
                listener.enterElseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBlock" ):
                listener.exitElseBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBlock" ):
                return visitor.visitElseBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseBlock(self):

        localctx = LN4Parser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LN4Parser.ELSE)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.match(LN4Parser.NL)
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==44):
                    break

            self.state = 139
            self.statementList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inlineStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LN4Parser.InlineStmtContext)
            else:
                return self.getTypedRuleContext(LN4Parser.InlineStmtContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(LN4Parser.COLON)
            else:
                return self.getToken(LN4Parser.COLON, i)

        def ELSE(self):
            return self.getToken(LN4Parser.ELSE, 0)

        def getRuleIndex(self):
            return LN4Parser.RULE_inlineStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineStatements" ):
                listener.enterInlineStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineStatements" ):
                listener.exitInlineStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineStatements" ):
                return visitor.visitInlineStatements(self)
            else:
                return visitor.visitChildren(self)




    def inlineStatements(self):

        localctx = LN4Parser.InlineStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_inlineStatements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.inlineStmt()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 142
                    self.match(LN4Parser.COLON)
                    self.state = 143
                    self.inlineStmt() 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 149
                self.match(LN4Parser.ELSE)
                self.state = 150
                self.inlineStmt()
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 151
                        self.match(LN4Parser.COLON)
                        self.state = 152
                        self.inlineStmt() 
                    self.state = 157
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentOrCall(self):
            return self.getTypedRuleContext(LN4Parser.AssignmentOrCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(LN4Parser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return LN4Parser.RULE_inlineStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineStmt" ):
                listener.enterInlineStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineStmt" ):
                listener.exitInlineStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineStmt" ):
                return visitor.visitInlineStmt(self)
            else:
                return visitor.visitChildren(self)




    def inlineStmt(self):

        localctx = LN4Parser.InlineStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inlineStmt)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 26, 34, 38, 39, 40, 41, 42, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.assignmentOrCall()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

